--- a/whitelist-on.html
+++ b/whitelist-on.html
@@ -25,7 +25,7 @@
 <br>
 <div>Powered By: <span><a style="
     color: cornflowerblue;"
-    href="https://img.dalao.pro/">大佬图床</a></span></div>
+    href="https://img.681189.xyz">图床</a></span></div>
 </div>
 
 
