--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <footer class="footer">
         <div class="container text-center">
             <p class="text-muted">Copyright Ⓒ 2023 All rights reserved. 请勿上传违反中国法律的图片，违者后果自负。<br/> 
-	    本站搭建由<a href="https://681189.xyz" target="_blank" >Lee</a>搭建维护<br/> 
+	    本站由<a href="https://681189.xyz" target="_blank" >Lee</a>搭建维护<br/> 
             感谢<a href="https://www.dalao.pro" target="_blank" >大佬博客</a>的搭建教程！      
         </div>
     </footer>
